tests/ui/cast/casts-differing-anon.stderr
error[E0606]: casting `*mut impl Debug + ?Sized` as `*mut impl Debug + ?Sized` is invalid
  --> $DIR/casts-differing-anon.rs:21:13
   |
LL |     b_raw = f_raw as *mut _;
   |             ^^^^^^^^^^^^^^^
   |
   = note: vtable kinds may not match

error: aborting due to previous error

For more information about this error, try `rustc --explain E0606`.
